[package]
name = "duktape"
version = "0.1.0"
edition = "2021"
description = "duktape bindings"
license = "MIT"
homepage = "https://github.com/polachok/duktape/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duktape-sys = { path = "./duktape-sys" }
duktape-macros = { path = "./duktape-macros" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
