[package]
name = "dukt-sys"
version = "0.1.0"
edition = "2021"
description = "raw bindings for duktape"
license = "MIT"
homepage = "https://github.com/polachok/duktape/"
repository = "https://github.com/polachok/duktape/"
keywords = ["javascript", "js", "duktape", "bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
libc = "0.2"

[build-dependencies]
bindgen = "0.59"
cc = "1.0"
