[package]
name = "duktape-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
inflections = "1.1"

[dev-dependencies]
duktape = { path = ".." }
duktape-sys = { path = "../duktape-sys" }
serde = { version = "1.0", features = ["derive"] }
