[package]
name = "duktape-macros"
version = "0.1.0"
edition = "2021"
description = "duktape bindings macros"
license = "MIT"
homepage = "https://github.com/polachok/duktape/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
inflections = "1.1"

[dev-dependencies]
duktape = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
